Fix some FindBugs warnings